tests/wormhole/sfpi/gold/warn.txt
In file included from test.h:11,
                 from warn.cc:5:
../../../include/sfpi.h: In function 'void global()':
../../../include/sfpi.h:919:7: error: cannot write sfpu vector to memory
  919 |     v = (initialized) ? __builtin_rvtt_sfpassign_lv(v, in) : in;
      |     ~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../../include/sfpi.h: In function 'void pointeruse(sfpi::vFloat*)':
../../../include/sfpi.h:919:7: error: cannot write sfpu vector to memory
  919 |     v = (initialized) ? __builtin_rvtt_sfpassign_lv(v, in) : in;
      |     ~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from ../../../include/sfpi.h:1126,
                 from test.h:11,
                 from warn.cc:5:
../../../include/wormhole/sfpi_imp.h: In function 'void address()':
../../../include/wormhole/sfpi_imp.h:172:7: error: cannot write sfpu vector to memory
  172 |     v = __builtin_rvtt_sfploadi_ex(SFPLOADI_EX_MOD0_FLOAT, f32asui(val));
In function 'void unnit()':
cc1plus: warning: 'vec.sfpi::vBase::v' is used uninitialized in this function [-Wuninitialized]
In function 'void argcall(sfpi::vFloat)':
cc1plus: error: invalid declaration for function 'argcall', sfpu types cannot be passed on the stack (missing sfpi_inline?)
../../../include/wormhole/sfpi_imp.h: In function 'sfpi::vFloat ret()':
../../../include/wormhole/sfpi_imp.h:172:7: error: cannot write sfpu vector to memory
  172 |     v = __builtin_rvtt_sfploadi_ex(SFPLOADI_EX_MOD0_FLOAT, f32asui(val));
warn.cc: In function 'void setccnotinsidepushpop()':
warn.cc:70:31: error: malformed program, sfpsetcc_v outside of pushc/popc
   70 |     __builtin_riscv_sfpsetcc_v(a, 12);
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~
In file included from ../../../include/sfpi.h:1126,
                 from test.h:11,
                 from warn.cc:5:
../../../include/wormhole/sfpi_imp.h: In function '(static initializers for warn.cc)':
../../../include/wormhole/sfpi_imp.h:172:7: error: cannot write sfpu vector to memory
  172 |     v = __builtin_rvtt_sfploadi_ex(SFPLOADI_EX_MOD0_FLOAT, f32asui(val));
